--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -39,6 +39,12 @@ preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
+  orientation:
+    type: select
+    options:
+      values:
+        - Left
+        - Right  
   description:
     type: textarea
   heading:
