Fix: changed css style for Right alignment

--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -16,7 +16,7 @@ blueprint:
     contact_details: [bookshop:generic/labelled-icon]
     button: bookshop:generic/button    
   styles:
-    orientation:
+    orientation: Left
     background_variant: light
 
 
