--- a/component-library/components/sections/hero/hero.bookshop.yml
+++ b/component-library/components/sections/hero/hero.bookshop.yml
@@ -3,8 +3,8 @@ spec:
   structures:
     - content_blocks
   label: "Hero"
-  description:
-  icon:
+  description: Provide concise information at the top of the page to engage website visitors
+  icon: feed
   tags: []
 
 # Defines the structure of this component, as well as the default values
