--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -11,7 +11,10 @@ spec:
 blueprint:
   content:
     social_icons: true
-    heading: bookshop:generic/component-heading
+    heading: 
+      bookshop: generic/component-heading
+      primary_heading: A contact block
+      eyebrow_headline: ''
     description: This is a simple yet powerful block to display not only your location by using Google Maps, but also any other contact details you wish to share with your customers.
     contact_details:
       - text: mybusiness@business.com
@@ -29,13 +32,12 @@ preview:
     heading:
       bookshop: generic/component-heading
       primary_heading: A contact block
+      eyebrow_headline: ''
     content: Content
-    button:
-    icons:
-      - bookshop: generic/labelled-icon
-        arrangement: inline
-        text: Icon text
-        icon: bookshop:generic/icon
+    contact_details:
+      - text: mybusiness@business.com
+        hero_icon_name: envelope
+    button: bookshop:generic/button    
   styles:
     orientation: Left
     background_variant: dark
