--- a/component-library/components/sections/hero/hero.bookshop.yml
+++ b/component-library/components/sections/hero/hero.bookshop.yml
@@ -9,22 +9,20 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  variant: left-right-feature
-  background:
-    image: bookshop:generic/image
   content:
     heading: bookshop:generic/component-heading!
     button: bookshop:generic/button!
     description: Description text to compliment the block
+    image: bookshop:generic/image
+  styles:
+    image_alignment: left
+    background_variant: light
+
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
-  variant: background-image-feature
-  background:
-    image:
-      _bookshop_name: generic/image
-      image_path: /assets/images/Testimonial--background-feature.png
-      image_alt: A woman laughing
+  styles:
+    variant: background-image-feature
   content:
     heading:
       _bookshop_name: generic/component-heading
@@ -39,12 +37,19 @@ preview:
       arrow: right
       onclick: console.log(this)
     description: "We wanted you to have a couple of options to use above the fold, and give you the customisation you need to display your product/service in the best way possible."
+    image:
+      _bookshop_name: generic/image
+      image_path: /assets/images/Testimonial--background-feature.png
+      image_alt: A woman laughing
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
-  variant:
+  image_alignment:
     type: select
     options:
       values:
-        - background-image-feature
-        - left-right-feature
+        - left
+        - right
+        - full-background
+  background_variant:
+    comment: This is not used for the full-background image alignment
