Chore: Minor tweaks to config - made button apepar by default

--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -19,7 +19,7 @@ blueprint:
     contact_details:
       - text: mybusiness@business.com
         hero_icon_name: envelope
-    button: bookshop:generic/button    
+    button: bookshop:generic/button!    
   styles:
     orientation: Left
     background_variant: dark
