Feat: Adding structures to config to allow users to add pre-defined contact details

--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -54,3 +54,14 @@ _inputs:
     eyebrow_headline: ''
   description:
     type: textarea  
+
+_structures:
+  contact_details:
+    - label: Email
+      value:
+        text: mybusiness@business.com
+        hero_icon_name: envelope
+    - label: Custom
+      value:
+        text: ''
+        hero_icon_name: ''
