Feat: Adding structures to config to allow users to add pre-defined contact details

--- a/component-library/components/sections/contact-block/contact-block.bookshop.yml
+++ b/component-library/components/sections/contact-block/contact-block.bookshop.yml
@@ -56,7 +56,7 @@ _inputs:
     type: textarea  
 
 _structures:
-  contact_details:
+  content.contact_details:
     - label: Email
       value:
         text: mybusiness@business.com
