--- a/component-library/components/simple/simple-text-block/simple-text-block.bookshop.yml
+++ b/component-library/components/simple/simple-text-block/simple-text-block.bookshop.yml
@@ -2,7 +2,7 @@
 spec:
   structures:
     - content_blocks
-  label: "Content-block"
+  label: "Simple Text Block"
   description: This is a content block with header
   icon: article
   tags: []
