--- a/component-library/components/simple/simple-text-block/simple-text-block.bookshop.yml
+++ b/component-library/components/simple/simple-text-block/simple-text-block.bookshop.yml
@@ -9,8 +9,11 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  heading: bookshop:generic/component-heading!
-  content: bookshop:generic/text-block!
+  content:
+    heading: bookshop:generic/component-heading!
+    description: bookshop:generic/text-block!
+  styles:
+    background_variant: light
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
