--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eleventy:watch": "ELEVENTY_ENV=development eleventy --serve",
     "sass:watch": "sass --no-source-map --watch src/assets/styles:css",
     "sass:build": "sass --no-source-map src/assets/styles:css",
-    "start": "npm-run-all sass:build bookshop-sass:build --parallel bookshop-sass:watch sass:watch bookshop:browser eleventy:watch"
+    "start": "npm-run-all bookshop-sass:build --parallel bookshop-sass:watch sass:watch bookshop:browser eleventy:watch"
   },
   "repository": {
     "type": "git",
