--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -70,12 +70,12 @@ _inputs:
         icon:
           - key: icon
       values:
-        - name: Dark
-          id: dark
-          icon: dark_mode
-        - name: Light
-          id: light
-          icon: light_mode
+        - name: Primary
+          id: primary
+          icon: star
+        - name: Secondary
+          id: secondary
+          icon: star_outline
 _select_data: {}
 _structures:
   content_blocks:
