--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -19,7 +19,7 @@ blueprint:
         hero_icon_name: envelope
     button: bookshop:generic/button!    
   styles:
-    orientation: Left
+    map_alignment: Left
     background_variant: dark
 
 
