--- a/component-library/components/simple/card/card.bookshop.yml
+++ b/component-library/components/simple/card/card.bookshop.yml
@@ -9,9 +9,7 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  is_image: true
-  image: bookshop:generic/image
-  icon: bookshop:generic/icon
+  imagery: bookshop:structure:card_imagery_blocks
   heading: bookshop:generic/component-heading
   content: These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience. They come with an action link to get your users into the journey you’ve crafted for them.
   button:
