Fix: fixed references of 'light' to 'primary'

--- a/component-library/components/generic/sample/sample.bookshop.yml
+++ b/component-library/components/generic/sample/sample.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   text: 
   styles:
-    background_variant: "Light"
+    background_variant: "primary"
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
