Bugfix: fixing preview for contact details - currently all say 'Email' regardless of actual label

--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -45,8 +45,11 @@ _inputs:
     type: array
     options:
       structures:
+        preview:
+          text: 
+            - key: label
         values:
-          - label: Email
+          - label: Email          
             value:
               text: 'Email address: mybusiness@business.com'
               hero_icon_name: envelope
