--- a/component-library/components/sections/simple-text-block/simple-text-block.bookshop.yml
+++ b/component-library/components/sections/simple-text-block/simple-text-block.bookshop.yml
@@ -11,7 +11,7 @@ spec:
 blueprint:
   content:
     heading: bookshop:generic/component-heading!
-    text: There are many reasons a website should have a terms of use agreement. For example, a terms of use page would show the website is a legitimate operation and increase user confidence. However, the most important reasons a business should have a terms and conditions page are to limit the business's liability, prevent users from abusing the service, protect the site's intellectual property, and ensure that the users comply with the site's terms.
+    text: bookshop:generic/text-block!
   styles:
     background_variant: light
 
