--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -47,32 +47,29 @@ _inputs:
       structures:        
         values:
           - label: Email          
-            preview:
-              text: Email
             value:
+              _type: Email
               text: 'Email address: mybusiness@business.com'
               hero_icon_name: envelope
           - label: Phone
-            preview:
-              text: Phone
             value:
+              _type: Phone
               text: 'Phone number: 312 325 326'
               hero_icon_name: phone
-          - label: Address
-            preview:
-              text: Address
+          - label: Address         
             value:
+              _type: Address
               text: 'Address: 1 Fake St, Faketown'
               hero_icon_name: map-pin
           - label: Opening hours
             preview:
               text: Opening hours
             value:
+              _type: Hours
               text: 'Opening hours: 9-5pm, Monday to Friday'
               hero_icon_name: clock
           - label: Custom
-            preview:
-              text: Custom
+            _type: Custom
             value:
               text: ''
               hero_icon_name: ''
