--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -46,7 +46,8 @@ _inputs:
     options:
       structures:        
         values:
-          - label: Email          
+          - label: Email    
+            icon: mail_outline      
             value:
               _type: Email
               text: 'Email address: mybusiness@business.com'
