--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -58,19 +58,22 @@ _inputs:
               _type: Phone
               text: 'Phone number: 312 325 326'
               hero_icon_name: phone
-          - label: Address         
+          - label: Address 
+            icon: location_on        
             value:
               _type: Address
               text: 'Address: 1 Fake St, Faketown'
               hero_icon_name: map-pin
           - label: Opening hours
+            icon: schedule
             value:
               _type: Hours
               text: 'Opening hours: 9-5pm, Monday to Friday'
               hero_icon_name: clock
           - label: Custom
-            _type: Custom
+            icon: person
             value:
+              _type: Custom
               text: ''
               hero_icon_name: ''
   map_alignment:
