--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -26,10 +26,7 @@ blueprint:
 preview:
   content:
     display_social_icons: true
-    heading:
-      bookshop: generic/component-heading
-      primary_heading: A contact block
-      eyebrow_headline: ''
+    heading: A contact block
     content: Content
     contact_details:
       - text: 'Email address: mybusiness@business.com'
