Fix: add tags and use modal input

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -82,17 +82,7 @@ _inputs:
 _select_data: {}
 _structures:
   content_blocks:
-    style: select
-    id_key: _bookshop_name
-    values:
-      - value:
-          _bookshop_name: generic/sample
-          text:
-        label: Sample
-        description:
-        icon:
-        tags: []
-        _inputs: {}
+    style: modal
 _editables: {}
 
 data_config:
