--- a/component-library/components/simple/card/card.bookshop.yml
+++ b/component-library/components/simple/card/card.bookshop.yml
@@ -9,17 +9,21 @@ spec:
 
 # Defines the structure of this component, as well as the default values
 blueprint:
-  imagery: bookshop:structure:card_imagery_blocks
-  heading: bookshop:generic/component-heading
-  content: These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience. They come with an action link to get your users into the journey you’ve crafted for them.
-  button:
-    url: ""
-    text: "Button text"
-    open_in_new_tab: false
-  background_variant:
+  content:
+    imagery: bookshop:structure:card_imagery_blocks
+    heading: bookshop:generic/component-heading
+    text: These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience. They come with an action link to get your users into the journey you’ve crafted for them.
+    button:
+      url: ""
+      text: "Button text"
+      open_in_new_tab: false
+  styles:
+    background_variant: dark
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
+  text:
+    type: textarea
