Refactor: trying to add a structure to the button

--- a/component-library/components/simple/card/card.bookshop.yml
+++ b/component-library/components/simple/card/card.bookshop.yml
@@ -13,10 +13,7 @@ blueprint:
     imagery: bookshop:structure:card_imagery_blocks
     heading: bookshop:generic/component-heading
     text: These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience. They come with an action link to get your users into the journey you’ve crafted for them.
-    button:
-      url: ""
-      text: "Button text"
-      open_in_new_tab: false
+    button: bookshop:generic/button
   styles:
     background_variant: dark
 
@@ -27,3 +24,11 @@ preview:
 _inputs:
   text:
     type: textarea
+  button:
+    structures:
+      values:
+        - label: Button
+          value: 
+            url: ""
+            text: "Button text"
+            open_in_new_tab: false
