--- a/component-library/components/simple/card/card.bookshop.yml
+++ b/component-library/components/simple/card/card.bookshop.yml
@@ -11,12 +11,12 @@ spec:
 blueprint:
   content:
     imagery: bookshop:structure:card_imagery_blocks
-    heading: bookshop:generic/component-heading!
+    heading: bookshop:generic/component-heading
     text: These versatile cards can be used to talk about your services or products, or anything else you are keen to share with your audience. They come with an action link to get your users into the journey you’ve crafted for them.
     button: 
-       url: ""
-       text: "Button text"
-       open_in_new_tab: false
+      url: ""
+      text: "Button text"
+      open_in_new_tab: false
   styles:
     background_variant: dark
 
@@ -27,13 +27,3 @@ preview:
 _inputs:
   text:
     type: textarea
-  button:
-    type: object
-    structures:
-      values:
-        label: Button
-        icon: smart_button
-        value: 
-          url: ""
-          text: "Button text"
-          open_in_new_tab: false
