--- a/component-library/components/sections/grid--gallery-images/grid--gallery-images.bookshop.yml
+++ b/component-library/components/sections/grid--gallery-images/grid--gallery-images.bookshop.yml
@@ -14,7 +14,7 @@ blueprint:
     description: Description text to compliment the block
     gallery: bookshop:simple/gallery!
   styles:
-    background_variant: light
+    background_variant: primary
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
