--- a/component-library/components/simple/card/card.bookshop.yml
+++ b/component-library/components/simple/card/card.bookshop.yml
@@ -17,7 +17,7 @@ blueprint:
       text: "Button text"
       open_in_new_tab: false
   styles:
-    background_variant: dark
+    background_variant: secondary
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
