--- a/component-library/components/sections/simple-text-block/simple-text-block.bookshop.yml
+++ b/component-library/components/sections/simple-text-block/simple-text-block.bookshop.yml
@@ -13,7 +13,7 @@ blueprint:
     heading: bookshop:generic/component-heading!
     text: bookshop:generic/text-block!
   styles:
-    background_variant: light
+    background_variant: primary
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
 preview:
