Feat: add color logic for icons and background

--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.bookshop.yml
@@ -19,7 +19,7 @@ blueprint:
     button: bookshop:generic/button!    
   styles:
     map_alignment: Left
-    background_variant: dark
+    background_variant: secondary
 
 
 # Overrides any fields in the blueprint when viewing this component in the component browser
@@ -34,7 +34,7 @@ preview:
     button: bookshop:generic/button    
   styles:
     map_alignment: Left
-    background_variant: dark
+    background_variant: secondary
 
 # Any extra CloudCannon inputs configuration to apply to the blueprint
 _inputs:
